--- a/config/config.org
+++ b/config/config.org
@@ -70,36 +70,10 @@
  ;; consertar cedilha
  (global-set-key (kbd "ć") (lambda () (interactive) (insert "ç")))
  #+END_SRC
-** Aparência 
-*** Temas
- #+BEGIN_SRC emacs-lisp 
-   (load "~/.emacs.d/lisp/late-night-theme.el")
-    (setq hour (string-to-number (format-time-string "%H")))
-   (cond ((and (< hour 5) (>= hour 0)) (progn  (load-theme 'almost-mono-black t)
-					       (load-theme 'late-night t)))
-	      ((and (>= hour 5) (<= hour 17)) (progn (load-theme 'almost-mono-white t)
-						     (load-theme 'leuven)
-						     (disable-theme 'leuven))) ;;; this is done in order to save change the 
-						     ;;;;color of the cursor (because it is invisible under 
-						     ;;;the almost-mono-white theme). 
-	      ((and (>= hour 18) (<= hour 23)) (load-theme 'doom-dark+ t)))
-   ;(hl-line-mode 1)
-   (set-frame-parameter (selected-frame) 'alpha '(100 . 100))
-#+END_SRC
-*** Menus, barras etc
-#+BEGIN_SRC emacs-lisp 
- ;; removendo barras e scroll etc
- (global-linum-mode)
- (hl-line-mode 1)
- (fringe-mode 0)
- (setq linum-format " %d  ")
- (tool-bar-mode -1)
- (menu-bar-mode -1)
- (scroll-bar-mode -1)
- (show-paren-mode 1)
- #+END_SRC
+
 ** Org mode
 *** Geral
+
  #+BEGIN_SRC emacs-lisp  
 
    (require 'ob-lilypond)
@@ -124,7 +98,9 @@
 				      (setq truncate-lines nil))))
     (add-to-list 'org-file-apps '(directory . emacs))
  #+END_SRC
+
 *** Publish
+
     #+BEGIN_SRC emacs-lisp
     ;;;; exportar para HTML com css do Twitter Bootstrap
     ;;;; não é lá essas coisas
@@ -136,7 +112,9 @@
     ;;;; com o org mode padrão
     (require 'ox-slimhtml)
     #+END_SRC
+
 *** Agenda
+
  #+BEGIN_SRC emacs-lisp
 	(require 'org-habit)
 	(setq org-habit-graph-column 100) 
@@ -159,6 +137,7 @@
 								  (agenda-minus-ical :maxlevel . 1)
 								  (projetos :maxlevel . 1))))))
  #+END_SRC
+
 *** Calendar
     [[https://github.com/myuhe/org-gcal.el][Org-gcal]] serve para sincronizar o meu google calendar com o org mode. 
     O comando usado para pegar os valores das variáveis de ambiente para configurar o org-gcal é [[https://github.com/paulorssalves/useful-scripts/blob/master/getgcalvar][este]].
@@ -169,9 +148,11 @@
 	org-gcal-client-secret (car gcal-envs) ; client secret 
 	org-gcal-file-alist '(("pauloroberto.21s@gmail.com" . "/media/paulo/HDD_1/syncthing/org/gcalendar.org")))
 #+END_SRC
+
 *** Org Capture 
 **** Setup
      Configurando o org mode
+
   #+BEGIN_SRC emacs-lisp 
   (require 'org-capture)
 
@@ -188,7 +169,9 @@
     (noflet ((switch-to-buffer-other-window (buf) (switch-to-buffer buf)))
       (org-capture)))
   #+END_SRC
+
 **** Templates 
+
      #+BEGIN_SRC emacs-lisp
        (defun capture-report-data-file (path)
 	 (let ((name (read-string "Name: ")))
@@ -281,13 +264,17 @@
 		(file "/media/paulo/HDD_1/syncthing/org/templates/review_template.orgcaptmpl") :empty-lines 1)))
 
      #+END_SRC
+
 ** Linguages de marcação 
    Configurações diversas para diferentes linguades de marcação
 *** Markdown
+
     #+BEGIN_SRC emacs-lisp
     (setq markdown-open-command "/usr/bin/grip")
     #+END_SRC
+
 *** TeX 
+
     #+BEGIN_SRC emacs-lisp
     (add-to-list 'load-path "~/.emacs.d/lisp/auctex-12.2")
     (load "auctex.el" nil t t)
@@ -304,6 +291,7 @@
     #+END_SRC
    
 ** Hooks
+   
  #+BEGIN_SRC emacs-lisp
   ;;;;; tirar os detalhes do dired, i.e., mostrar apenas 
   ;;;;; o nome dos arquivos e diretórios
@@ -345,6 +333,7 @@
    (add-hook 'java-mode-hook (lambda ()
 			       (electric-pair-mode 1)))
  #+END_SRC
+
 ** Atalhos 
  #+BEGIN_SRC emacs-lisp
    (global-set-key (kbd "C-c w") 'web-mode-surround)
@@ -367,6 +356,33 @@
 
  ;;; valida uma s-exp e a substitui pelo valor que ela retorna
    (global-set-key (kbd "M-r") 'replace-last-sexp)
+ #+END_SRC
+* Aparência 
+*** Temas
+
+ #+BEGIN_SRC emacs-lisp 
+   (load "~/.emacs.d/lisp/late-night-theme.el")
+   (setq hour (string-to-number (format-time-string "%H")))
+   (cond ((and (< hour 5) (>= hour 0)) (progn  (load-theme 'almost-mono-black t)
+					       (load-theme 'late-night t)))
+	      ((and (>= hour 5) (<= hour 23)) (progn (load-theme 'doom-manegarm t)
+						     (load-theme 'almost-mono-black t)))) 
+   ;(hl-line-mode 1)
+   (set-frame-parameter (selected-frame) 'alpha '(80 . 80))
+#+END_SRC
+
+*** Menus, barras etc
+
+#+BEGIN_SRC emacs-lisp 
+ ;; removendo barras e scroll etc
+ (global-linum-mode)
+ (hl-line-mode 1)
+ (fringe-mode 0)
+ (setq linum-format " %d  ")
+ (tool-bar-mode -1)
+ (menu-bar-mode -1)
+ (scroll-bar-mode -1)
+ (show-paren-mode 1)
  #+END_SRC
 
 * Funções extras 
